docs/install/kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraforming-mars
  labels:
    app.kubernetes.io/name: terraforming-mars
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: terraforming-mars
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: terraforming-mars
  template:
    metadata:
      labels:
        app.kubernetes.io/name: terraforming-mars
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: terraforming-mars
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: github-key
          secret:
            secretName: terraforming-mars-github-app
            items:
              - key: private-key
                path: private-key.pem
      containers:
        - name: terraforming-mars
          image: ghcr.io/terraforming-mars-ce/terraforming-mars:latest
          ports:
            - containerPort: 3001
              name: http
          volumeMounts:
            - name: github-key
              mountPath: /etc/secrets/github
              readOnly: true
