docs/install/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraforming-mars
  labels:
    app.kubernetes.io/name: terraforming-mars
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: terraforming-mars
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: terraforming-mars
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
