docs/install/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraforming-mars-backend
  labels:
    app.kubernetes.io/name: terraforming-mars-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: terraforming-mars
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: terraforming-mars-backend
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
