docs/install/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraforming-mars-frontend
  labels:
    app.kubernetes.io/name: terraforming-mars-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: terraforming-mars
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: terraforming-mars-frontend
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
