docs/install/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terraforming-mars
  labels:
    app.kubernetes.io/name: terraforming-mars
    app.kubernetes.io/part-of: terraforming-mars
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <your-hostname>
      secretName: <your-tls-secret>
  rules:
    - host: <your-hostname>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: terraforming-mars
                port:
                  number: 3001
